# tosqla

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
sqlamodels/: __main__.py  cli.py  mysql_ui.py  mysqla.py  schema.py  schema_ui.py
sqlamodels/templates/: body.py.tmplt  imports.py.tmplt  meta.py.tmplt
tosqla/: __main__.py  mysqla.py
tosqla/templates/: body.py.tmplt  imports-one.py.tmplt  imports.py.tmplt
