[project]
name = "tosqla"
version = "0.1.2"
description = "generate sqlalchemy models from tables"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "jinja2>=3.1.6",
    "pymysql>=1.2.0,<2",
    "sqlalchemy>=2.0.43",
]

[project.scripts]
tosqla = "tosqla.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
